# fixed-source

./: README.md  compile_app.sh  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: HoldonaSec_16Khz_byBryanTeoh_FreePD.lc3  HoldonaSec_24Khz_byBryanTeoh_FreePD.lc3  MusicAttribution.txt  main.c  rgb_led.c
